# sns-records

./: README.md
js/: package-lock.json  package.json
js/src/: bindings.ts
program/: Cargo.toml  Dockerfile  build.sh  flake.nix
program/src/: lib.rs
program/src/processor/: validate_ethereum_signature.rs
