[package]
name = "sns-records"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Bindings and program code for the Solana Name Service Records protocol"
repository = "https://github.com/SolanaNameService/sns-records"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []
devnet = []

[dependencies]
solana-program = "2.2.1"
num_enum = "0.6.1"
borsh = "0.10.3"
thiserror = "1.0.24"
num-traits = "0.2"
num-derive = "0.3"
enumflags2 = "0.7.1"
bonfida-utils = "0.7.0"
spl-associated-token-account = { version = "7.0.0", features = [
    "no-entrypoint",
] }
spl-name-service = { version = "0.4.0", package = "spl-name-service-2", features = [
    "no-entrypoint",
] }
bytemuck = "1.13.1"

time-macros = "0.2.24"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
hex = "0.4.3"
solana-security-txt = "1.1.1"
# Needs a devnet conditional feature
sns-warp-common = { version = "0.2.0", features = ["solana"] }

[dev-dependencies]
hexdump = "0.1.0"
solana-sdk = "2.2.1"
rand = "0.8.4"
arrayref = "0.3.6"
solana-program-test = "2.2.1"
tokio = { version = "1.6", features = ["macros"] }


[lib]
crate-type = ["cdylib", "lib"]
